Bug 330415 - Right click ON WACOM STYLUS does bring up menu but no favorite brush can be chosen
Summary: Right click ON WACOM STYLUS does bring up menu but no favorite brush can be c...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tablets (tablet issues are only very rarely bugs in Krita!) (other bugs)
Version First Reported In: 2.8 Beta
Platform: Microsoft Windows Microsoft Windows
: NOR major
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords: release_blocker
Depends on:
Blocks:
 
Reported: 2014-01-26 01:12 UTC by slawek
Modified: 2014-02-04 08:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description slawek 2014-01-26 01:12:23 UTC
- When using wacom stylus, right click brings up menu - but it lasts ONLY until button is being pushed down. No matter what do I choose from favorite brushes (keeping right click pushed to keep menu floating) - brush stays as default, it doesnt works at all.


Reproducible: Always

Steps to Reproduce:
1.Turn on Krita
2.press button on wacom stylus that is set to "right click"
3.Try to use menu
Actual Results:  
Menu shows up only for the time I am pressing button, no brush can be chosen from it

Expected Results:  
Menu should stay floating even after button was released, I should be able to change brushes 

Everything works fine with mouse - menu stays open, I can choose from it. 

Working workaround: when I go to  "wacom tablet properties" and I add krita application to make a specific setup for that app (with krita running click "+" on the right hand side of "Application" window and choose "krita"), I can make it work properly. I do so by setting right click (button closer to tip of stylus) into "middle click" and to button on stylus as "Disabled". This somehow allows to use right click menu in krita as intended. Dont know how, but it works.
Comment 1 Dmitry Kazakov 2014-02-02 16:30:51 UTC
Git commit b1eb8c4315eeef49b09958856346ea76bf20e03c by Dmitry Kazakov.
Committed on 02/02/2014 at 16:30.
Pushed by dkazakov into branch 'master'.

Add eating of the mouse events which are generated by the tablet driver

If a KisTabletEvent has been accepted, there is no need to process the
next mouse event generated by the driver to support legacy frameworks.

M  +6    -2    krita/ui/input/kis_tablet_event.h
M  +29   -1    krita/ui/input/wintab/kis_tablet_support_win.cpp

http://commits.kde.org/calligra/b1eb8c4315eeef49b09958856346ea76bf20e03c
Comment 2 Dmitry Kazakov 2014-02-04 08:27:06 UTC
Git commit cfd3077d81c5b9dc06a1111c269d96964b8184e5 by Dmitry Kazakov.
Committed on 02/02/2014 at 16:30.
Pushed by dkazakov into branch 'calligra/2.8'.

Add eating of the mouse events which are generated by the tablet driver

If a KisTabletEvent has been accepted, there is no need to process the
next mouse event generated by the driver to support legacy frameworks.

M  +6    -2    krita/ui/input/kis_tablet_event.h
M  +29   -1    krita/ui/input/wintab/kis_tablet_support_win.cpp

http://commits.kde.org/calligra/cfd3077d81c5b9dc06a1111c269d96964b8184e5