Add eating of the mouse events which are generated by the tablet driver

If a KisTabletEvent has been accepted, there is no need to process the
next mouse event generated by the driver to support legacy frameworks.

BUG:330415